fix(ZNTA-2091): whitespace, convert tabs to spaces

--- a/server/zanata-war/src/main/webapp/resources/assets/css/application.css
+++ b/server/zanata-war/src/main/webapp/resources/assets/css/application.css
@@ -913,23 +913,21 @@ a.downloadLink {
 .translatorEditorContainer *::-webkit-scrollbar-track
 {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
+  border-radius: 10px;
+  background-color: #F5F5F5;
 }
 
 .translatorEditorContainer *::-webkit-scrollbar
 {
   width: 14px;
-	background-color: #F5F5F5;
+  background-color: #F5F5F5;
 }
 
 .translatorEditorContainer *::-webkit-scrollbar-thumb
 {
   background-color: #03A6D7;
   border-radius: 10px;
-	background-image: -webkit-gradient(linear, 0 0, 0 100%,
-	                   color-stop(.5, rgba(255, 255, 255, .2)),
-					   color-stop(.5, transparent), to(transparent));
+  background-image: -webkit-gradient(linear, 0 0, 0 100%,color-stop(.5,rgba(255, 255, 255, .2)),color-stop(.5, transparent), to(transparent));
 }
 
 .translationContainer > div:nth-of-type(2) > div > div:nth-of-type(2) {
